Add support for Extended Multicast DNS draft standard
This adds support for draft-lynn-dnsext-site-mdns-01 and
draft-lynn-homenet-site-mdns-01 site local multicast drafts.

--- a/doc/README.html.in
+++ b/doc/README.html.in
@@ -163,9 +163,11 @@ new NSS modules in <tt>/lib</tt>:</p>
 <li><tt>libnss_mdns.so.2</tt></li>
 <li><tt>libnss_mdns4.so.2</tt></li>
 <li><tt>libnss_mdns6.so.2</tt></li>
+<li><tt>libnss_xmdns6.so.2</tt></li>
 <li><tt>libnss_mdns_minimal.so.2</tt></li>
 <li><tt>libnss_mdns4_minimal.so.2</tt></li>
 <li><tt>libnss_mdns6_minimal.so.2</tt></li>
+<li><tt>libnss_xmdns6_minimal.so.2</tt></li>
 </ul>
 <p><tt>libnss_mdns.so.2</tt>
 resolves both IPv6 and IPv4 addresses, <tt>libnss_mdns4.so.2</tt> only
